--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
   </head>
   <body>
   <header>
@@ -65,7 +65,7 @@
           <span>↓</span>
         </div>
         <div class="ans">
-          <p>A.愛知県長久手市になります。</p>
+          <p>A.愛知県X市になります。</p>
         </div>
       </div>
       <div class="ako">
@@ -83,7 +83,7 @@
           <span>↓</span>
         </div>
         <div class="ans">
-          <p>A.長久手市のバローはもちろん、名古屋市名東区や守山区、豊田市の一部のバローでも販売しています。</p>
+          <p>A.X市の△△スーパーはもちろん、Y市やT市、S市の一部の△△スーパーでも販売しています。</p>
         </div>
       </div>
       <div class="ako">
